--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,18 +8,18 @@ spring:
 server:
   port: 8080
 
-# mybatis-plus??
+# mybatis-plus 配置
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
-      logic-delete-field: isDelete # ????????????(since 3.3.0,????????????2)
-      logic-delete-value: 1 # ??????(??? 1)
-      logic-not-delete-value: 0 # ??????(??? 0)
+      logic-delete-field: isDelete # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 
-# springdoc-openapi????
+# springdoc-openapi 项目配置
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
@@ -31,7 +31,7 @@ springdoc:
     - group: 'default'
       paths-to-match: '/**'
       packages-to-scan: com.yixian.springbootinit.controller
-# knife4j???????????????
+# knife4j的增强配置，不需要增强可以不配
 knife4j:
   enable: true
   setting:
@@ -39,9 +39,9 @@ knife4j:
 
 yixian:
   jwt:
-    # ??jwt??????????
+    # 配置jwt密钥
     secret-key: yixian
-    # ??jwt????
+    # 配置jwt超时时间
     ttl: 7200000
-    # ?????????????
+    # 配置token名称
     token-name: token
