--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
             <version>2.3.1</version>
         </dependency>
         <dependency>
-            <groupId>com.yucongming</groupId>
-            <artifactId>yucongming-java-sdk</artifactId>
-            <version>0.0.2</version>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.18</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
