--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,20 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.yixian</groupId>
+            <groupId>cn.yixianweb</groupId>
             <artifactId>AiGenerate</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.20.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
