--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     url: jdbc:mysql://localhost:3306/yixianbi
     username: root
     password: jiangfei123
+  rabbitmq:
+    host: localhost
+    port: 5672
+    password: guest
+    username: guest
 
 server:
   port: 8081
